Retrieving product is funtional

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
         <img src="https://via.placeholder.com/150">
         <div class="title">Widget</div>
         <div class="description">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis laboriosam voluptatum enim quas cupiditate tempora assumenda sed soluta, adipisci, consequuntur, voluptatem magni saepe tempore! Sint ad quaerat blanditiis quas adipisci.<br>
+            Widgets are the hottest product on the market now, everybody wants one, get one now!
         </div>
         <div class="buy">BUY</div>
         <div class="price">$9.99</div>
     </div>
+    <script src="./js/main.js"></script>
 </body>
 </html>
