--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
         <div class="buy">BUY</div>
         <div class="price">$9.99</div>
     </div>
+
+    <div class="product">
+        <img src="https://via.placeholder.com/150">
+        <div class="title">Monitor</div>
+        <div class="description">
+            Every programmer needs at least 2!
+        </div>
+        <div class="buy">BUY</div>
+        <div class="price">$80.00</div>
+    </div>
+
+    <div id="display-cart"></div>
     <script src="./js/main.js"></script>
 </body>
 </html>
